objects/JobPosition.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDO_Golden_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IDO Golden Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDO_Record_Description__c</fullName>
        <label>IDO Record Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteers_Needed__c</fullName>
        <label>Volunteers Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>